# app/models/order.go
@@ -1,0 +1,6 @@
+package models
+
+type OrderOutPutModel struct {
+	Price float64                `gorm:"-" json:"price"`
+	Items []OrderItemOutPutModel `gorm:"-" json:"items"`
+}
